[package]
name = "txingest-classifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossbeam = "=0.8.4"
serde = { version = "=1.0.193", features = [ "derive" ] }
serde_json = "=1.0"
solana-sdk = { path = "/sandbox/solana-bji-private/sdk" }
